--- a/src/app/home/control-panel/user-group/user-group.component.html
+++ b/src/app/home/control-panel/user-group/user-group.component.html
@@ -87,9 +87,11 @@
         <div class="d-flex align-items-center">
           <span class="font-weight-bold mt-2">New Group</span>
         </div>
-        <span class="fa fa-times text-secondary hover close" (click)="showNewGroupWindow=false"></span>
+        <button type="button" class="close" (click)="showNewGroupWindow=false">
+          <span>&times;</span>
+        </button>
       </div>
-      <div class="d-flex flex-column w-100">
+      <div class="d-flex flex-column w-100 mt-4">
         <label for="name" class="font-sm text-secondary">
           <span class="text">Name</span>
           <sup class="text-danger font-normal high-zIndex" ngbTooltip="Mandatory field">*</sup>
@@ -124,8 +126,8 @@
         </div>
       </div>
     </div>
-    <div class="d-flex align-self-end justify-content-end w-100 mt-3">
-      <button type="button" class="btn btn-min-width btn-create" id="newServiceModalYes" [disabled]="form.invalid"
+    <div class="d-flex align-self-end justify-content-end w-100 mt-4">
+      <button type="button" class="btn btn-min-width btn-primary" id="newGroupModalYes" [disabled]="form.invalid"
         (click)="createGroup()">
         Create
       </button>
