--- a/src/app/home/faas/faas-listing/faas-filter/faas-filter.component.html
+++ b/src/app/home/faas/faas-listing/faas-filter/faas-filter.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="showFilter" class="mt-2">
+<div *ngIf="showFilter" class="w-100">
     <input *ngIf="field == 'name' || field == 'url'" type="text"
         class="border rounded bg-white w-100" [(ngModel)]="value" odpOnChange (textChange)="onChange($event)">
     <input *ngIf="field==='lastInvokedAt'" type="date" class="border rounded bg-white w-100" [(ngModel)]="value"
