--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -1,76 +1,78 @@
-<div class="d-flex flex-column w-100 h-100">
-  <odp-breadcrumb></odp-breadcrumb>
-  <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3 mb-3">
-    <div class="font-weight-bold font-lg">List of Function</div>
-    <button type="button" class="add-new btn-min-width btn btn-primary show" id="createDataFormat"
-      *ngIf="hasWritePermission('FAAS')" (click)="newFaas()">
-      <span class="fa fa-plus mr-2"></span>
-      <span class="text">New Function</span>
-    </button>
+<div class="d-flex flex-column w-100 h-100 bg-light-gray">
+  <div class="options d-flex justify-content-between align-items-center w-100 px-4">
+    <div class="font-xxl">
+      <span class="fw-600 mr-2">Functions ({{totalCount}})</span>
+      <span></span>
+    </div>
+    <div class="d-flex align-items-center">
+      <button id="createFunction" type="button" class="add-new btn btn-primary ml-3" (click)="newFaas()"
+        [disabled]="!hasWritePermission('FAAS')">
+        <span class="fa fa-plus"></span>
+      </button>
+    </div>
   </div>
   <div class="card-container d-flex flex-column w-100 px-3">
     <ag-grid-angular #agGrid *ngIf="columnDefs" class="ag-theme-balham ag-grid-container custom-style"
-      [columnDefs]="columnDefs" floatingFilter="true" rowModelType="infinite" [rowHeight]="32"
-      (filterModified)="filterModified($event)" [datasource]="dataSource" cacheBlockSize="30"
-      (sortChanged)="sortChanged($event)" (gridReady)="gridReady($event)" [overlayNoRowsTemplate]="noRowsTemplate">
+      [columnDefs]="columnDefs" floatingFilter="true" rowModelType="infinite" [rowHeight]="56"
+      (filterModified)="filterModified($event)" [datasource]="dataSource" cacheBlockSize="30" headerHeight="36"
+      floatingFiltersHeight="40" (sortChanged)="sortChanged($event)" (gridReady)="gridReady($event)"
+      [overlayNoRowsTemplate]="noRowsTemplate">
     </ag-grid-angular>
   </div>
 </div>
 
-
-<ng-template #newFaasModal>
-  <div class="new-faas-modal modal-body p-4 d-flex flex-column align-items-center" [formGroup]="form">
-    <div class="d-flex flex-column w-100">
-      <div class="d-flex align-items-center justify-content-between mb-3">
-        <div class="d-flex align-items-center">
-          <span class="icon-wrapper rounded-circle d-flex align-items-center justify-content-center mr-2">
-            <odp-function-icon size="16" color="1CAD49" class="mt-1"></odp-function-icon>
-          </span>
-          <span class="font-weight-bold mt-2">New Function</span>
-        </div>
-        <span class="fa fa-times text-muted hover" (click)="newFaasModalRef.close(false)"></span>
-      </div>
-      <div class="d-flex flex-column w-100">
-        <label for="name" class="font-sm text-secondary">
-          <span class="text">Name</span>
-          <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
-        </label>
-        <div class="name-wrapper position-relative">
-          <input newFaasName type="text" class="form-control" id="name" placeholder="Untitled Function"
-            formControlName="name" (keyup.enter)="newFaasTextarea.focus()" odpAutoFocus
-            [ngClass]="{'is-invalid':form.get('name').invalid && form.get('name').dirty}">
-          <ng-container *ngIf="form.get('name').dirty">
-            <span *ngIf="form.get('name').hasError('required')"
-              class="text-danger position-absolute fa fa-exclamation-circle" container="body"
-              ngbTooltip="Name is required"></span>
-            <span *ngIf="form.get('name').hasError('maxlength')"
-              class="text-danger position-absolute fa fa-exclamation-circle" container="body"
-              ngbTooltip="Name should be within 30 characters"></span>
-            <span *ngIf="form.get('name').hasError('pattern')"
-              class="text-danger position-absolute fa fa-exclamation-circle" container="body"
-              ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
-          </ng-container>
-        </div>
-        <label for="apiEndpoint" class="font-sm text-secondary mt-3">API Endpoint</label>
-        <div class="name-wrapper position-relative">
-          <input type="text" class="form-control" id="apiEndpoint" placeholder="/api/a/faas/" formControlName="api">
-        </div>
-        <label for="description" class="font-sm text-secondary mt-3">Description</label>
-        <div class="name-wrapper position-relative">
-          <textarea #newFaasTextarea class="form-control" id="description" rows="5" placeholder="No description"
-            formControlName="description" (keydown.enter)="$event.preventDefault()"
-            (keyup.enter)="newFaasModalRef.close(true)"></textarea>
-          <ng-container *ngIf="form.get('description').dirty">
-            <span *ngIf="form.get('description').hasError('maxlength')"
-              class="text-danger position-absolute fa fa-exclamation-circle" container="body"
-              ngbTooltip="Description should be within 240 characters"></span>
-          </ng-container>
-        </div>
+<div *ngIf="showNewFaasWindow" class="overlay position-fixed"></div>
+<div class="new-faas-window p-4 position-fixed border-left bg-white" [ngClass]="{'show': showNewFaasWindow}" [formGroup]="form">
+  <div class="d-flex align-items-center justify-content-between">
+    <h5 class="m-0">New Function</h5>
+    <button type="button" class="close" (click)="showNewFaasWindow=false">
+      <span>&times;</span>
+    </button>
+  </div>
+  <div *ngIf="showNewFaasWindow" class="d-flex flex-column w-100 mt-4">
+    <div class="form-group">
+      <label for="name" class="">
+        <span class="text">Name</span>
+        <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
+      </label>
+      <div class="name-wrapper position-relative">
+        <input newFaasName type="text" class="form-control" id="name" placeholder="Untitled Function"
+          formControlName="name" (keyup.enter)="newFaasTextarea.focus()" odpAutoFocus
+          [ngClass]="{'is-invalid':form.get('name').invalid && form.get('name').dirty}">
+        <ng-container *ngIf="form.get('name').dirty">
+          <span *ngIf="form.get('name').hasError('required')"
+            class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+            ngbTooltip="Name is required"></span>
+          <span *ngIf="form.get('name').hasError('maxlength')"
+            class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+            ngbTooltip="Name should be within 30 characters"></span>
+          <span *ngIf="form.get('name').hasError('pattern')"
+            class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+            ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
+        </ng-container>
       </div>
     </div>
-    <div class="d-flex align-self-end justify-content-end w-100 mt-3">
-      <button type="button" class="btn btn-min-width btn-create" id="newFaasModalYes" [disabled]="form.invalid"
-        (click)="newFaasModalRef.close(true)">Create</button>
+    <div class="form-group">
+      <label for="apiEndpoint" class="">API Endpoint</label>
+      <div class="name-wrapper position-relative">
+        <input type="text" class="form-control" id="apiEndpoint" placeholder="/api/a/faas/" formControlName="api">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="description" class="">Description</label>
+      <div class="name-wrapper position-relative">
+        <textarea #newFaasTextarea class="form-control" id="description" rows="5" placeholder="No description"
+          formControlName="description" (keydown.enter)="$event.preventDefault()"></textarea>
+        <ng-container *ngIf="form.get('description').dirty">
+          <span *ngIf="form.get('description').hasError('maxlength')"
+            class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+            ngbTooltip="Description should be within 240 characters"></span>
+        </ng-container>
+      </div>
     </div>
   </div>
-</ng-template>
+  <div class="d-flex align-self-end justify-content-end w-100 mt-4">
+    <button type="button" class="btn btn-primary btn-min-width" id="newFaasModalYes" [disabled]="form.invalid"
+      (click)="triggerFaasCreate()">Create</button>
+  </div>
+</div>
