--- a/src/app/home/faas/faas-listing/faas-listing.component.scss
+++ b/src/app/home/faas/faas-listing/faas-listing.component.scss
@@ -1,13 +1,8 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
 
-.header {
-  min-height: 50px;
-  max-height: 50px;
-}
 .options {
-  min-height: 50px;
-  max-height: 50px;
+  padding: 40px;
 }
 
 .card-container {
@@ -23,4 +18,28 @@
 .fa-exclamation-circle {
   top: 8px;
   right: 8px;
+}
+
+.overlay {
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background: rgba($color: #000000, $alpha: 0.6);
+}
+
+.new-faas-window {
+  height: 100vh;
+  width: 360px;
+  top: 0;
+  right: -360px;
+  z-index: 2;
+  transition: 0.2s;
+  overflow: auto;
+  padding-top: 40px !important;
+
+  &.show {
+    right: 0px !important;
+  }
 }
