--- a/src/app/home/control-panel/user/user-manage/user-manage.component.html
+++ b/src/app/home/control-panel/user/user-manage/user-manage.component.html
@@ -1,52 +1,26 @@
 <div class="settings">
-  <div class="hover ignore-outside" (click)="showSettings = !showSettings">
-    <i class="fa fa-cog font-xl" style="margin-right: 5px"></i>
-    <label style="margin-right: 10px">Profile Settings</label>
-    <i
-      class="fa-point fa"
-      [ngClass]="{
+  <div class="hover ignore-outside d-flex align-items-center p-2 border rounded-lg" (click)="showSettings = !showSettings">
+    <span class="fa fa-cog font-xl"></span>
+    <label class="my-0 mx-2">Profile Settings</label>
+    <span class="fa-point fa" [ngClass]="{
         'fa-chevron-down': !showSettings,
         'fa-chevron-up': showSettings
-      }"
-    ></i>
+      }"></span>
   </div>
   <div class="popover" *ngIf="showSettings" odpClickOutside (outside)="showSettings=false">
-    <span
-      id="closesession"
-      (click)="closeAllSessions(user)"
-      class="popover-options"
-      *ngIf="!isThisUser(user) && hasPermission('PMUA')"
-      >End Session</span
-    >
-    <span
-      id="removeaccess"
-      (click)="isAppAdmin ? removeAdminAccess() : makeAppAdmin()"
-      class="popover-options"
-      *ngIf="isElevatedUser && hasPermission('PMUG')"
-    >
-      {{ isAppAdmin ? 'Remove app Admin' : 'Make app Admin' }}</span
-    >
-    <span
-      class="popover-options"
-      id="resetpassowrd"
-      (click)="resetPassword()"
-      *ngIf="
+    <span id="closesession" (click)="closeAllSessions(user)" class="popover-options"
+      *ngIf="!isThisUser(user) && hasPermission('PMUA')">End Session</span>
+    <span id="removeaccess" (click)="isAppAdmin ? removeAdminAccess() : makeAppAdmin()" class="popover-options"
+      *ngIf="isElevatedUser && hasPermission('PMUG')">
+      {{ isAppAdmin ? 'Remove app Admin' : 'Make app Admin' }}</span>
+    <span class="popover-options" id="resetpassowrd" (click)="resetPassword()" *ngIf="
         showResetPassword &&
         authType &&
         authType == 'local' &&
         hasPermission('PMUA')
-      "
-      >Reset Password</span
-    >
-    <span
-      id="removefromapp"
-      class="popover-options"
-      [ngClass]="{
+      ">Reset Password</span>
+    <span id="removefromapp" class="popover-options" [ngClass]="{
         'disable-option': isThisUser(user)
-      }"
-      *ngIf="hasPermission('PMUBD')"
-      (click)="removeFromApp()"
-      >Remove from app</span
-    >
+      }" *ngIf="hasPermission('PMUBD')" (click)="removeFromApp()">Remove from app</span>
   </div>
 </div>
