--- a/src/app/home/control-panel/user/user-manage/user-manage.component.scss
+++ b/src/app/home/control-panel/user/user-manage/user-manage.component.scss
@@ -9,11 +9,10 @@
 }
 
 .popover {
-  margin-top: 30px;
   border: 1px solid #ECECEC;
   display: grid;
-  width: 150px;
-  margin-left: -30px;
+  width: 180px;
+  top: 42px;
 }
 
 .popover-options {
